--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,7 +1,3 @@
 <a [routerLink]="['/']">
-  <h1>My Store</h1>
-</a>
-
-<a routerLink="/cart" class="button fancy-button">
-  <i class="material-icons">shopping_cart</i>Checkout
+  <h1>Collect</h1>
 </a>
