--- a/src/app/fact-card/fact-card.component.scss
+++ b/src/app/fact-card/fact-card.component.scss
@@ -1,8 +1,33 @@
 :host {
-    display: inline-block;
-    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
-    padding-left: 10px;
-    padding-right: 10px;
-    width: 350px;
-    border-radius: 5px;
+  display: block;
+  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
+  padding: 15px;
+  width: 350px;
+  border-radius: 5px;
+}
+.cover-picture {
+  width: 75px;
+  height: 75px;
+}
+
+.chapter-name {
+  display: block;
+  font-size: 10px;
+  color: #C9C7C7;
+  text-transform: uppercase;
+}
+
+.title {
+  display: block;
+  font-size: 18px;
+  color: black;
+  margin-top: 5px;
+}
+
+.num-facts {
+  display: block;
+  font-size: 12px;
+  margin-top: 5px;
+  text-transform: uppercase;
+  color: #2773BC;
 }
