--- a/src/app/fact-card/fact-card.component.html
+++ b/src/app/fact-card/fact-card.component.html
@@ -3,6 +3,7 @@
   <div class="text-container">
     <span class="chapter-name">{{factCard.chapterName}}</span>
     <span class="title">{{factCard.title}}</span>
-    <span class="num-facts">{{factCard.numFacts}} {{formatFactCount()}}</span>
+    <span class="num-facts">{{factCard.numFacts}} {{formatFactCount()}}  </span>
+    <img class="arrow-icon" src="/assets/img/arrows.png"/>
   </div>
 </div>
