--- a/src/app/fact-card/fact-card.component.scss
+++ b/src/app/fact-card/fact-card.component.scss
@@ -6,15 +6,20 @@
   border-radius: 5px;
 }
 
-.cover-picture {
+.cover-picture-container {
   display: inline-block;
+  width: 75px;
+  height: 75px;
+  margin-right: 15px;
+}
+
+.cover-picture {
   width: 75px;
   height: 75px;
 }
 
 .text-container {
   display: inline-block;
-  margin-left: 15px;
   vertical-align: top;
 }
 
