--- a/src/app/fact-card/fact-card.component.html
+++ b/src/app/fact-card/fact-card.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="factCard">
+<div fxLayout="row" *ngIf="factCard">
   <div class="cover-picture-container" *ngIf="factCard.coverPictureUrl">
    <img class="cover-picture" src={{factCard.coverPictureUrl}}/>
   </div>
